--- a/Project1.qmd
+++ b/Project1.qmd
@@ -31,9 +31,9 @@ Data_1 <- as_tibble(read_csv(file = "https://www4.stat.ncsu.edu/~online/datasets
 
 #Create Column that has course and year together
 Year_digits <- as.numeric(substr(Data_1$Enrollment, 8, 9))
-Year <- as.character(1900+Year_digits)
+Data_1$Year <- as.character(1900+Year_digits)
 Course <- substr(Data_1$Enrollment,1,7)
-Data_1$Course_Year <- paste0(Course,Year)
+Data_1$Course_Year <- paste0(Course,Data_1$Year)
 
 #Identify rows for counties
 County_entries <- grep(pattern = ", \\w\\w", Data_1$area_name)
@@ -46,7 +46,7 @@ State <- Data_1[-County_entries,]
 class(State) <- c("State", class(State))
 
 #Create State variable for county
-County$State_abbr <- substr(County$area_name, nchar(County$area_name)-2, nchar(County$area_name))
+County$State_abbr <- trimws(substr(County$area_name, nchar(County$area_name)-2, nchar(County$area_name)))
 
 #Create Division for state
 State <- mutate(State, Division = ifelse(area_name %in% c("CONNECTICUT","MAINE",
@@ -83,12 +83,13 @@ combine_function<-function(url , default_var_name= "Enrollment"){
   pivot_longer(cols= 3:12, names_to = "Enrollment", values_to = "Enrollment_Number") |>
     
  #step 3
-    mutate(Course_Year=paste0(substr(Enrollment,1,7),as.character(1900+(as.numeric(substr(Enrollment, 8, 9)))))) |>
+    mutate(Year=as.character(1900+as.numeric(substr(Data_1$Enrollment, 8, 9)))) |>
+    mutate(Course_Year=paste0(substr(Enrollment,1,7),Year)) |>
     collect()
   
 #step 5
     County<-Data[grep(pattern = ", \\w\\w", Data$area_name),] |>
-    mutate(State_abbr=substr(area_name, nchar(area_name)-2, nchar(area_name))) |>
+    mutate(State_abbr=trimws(substr(area_name, nchar(area_name)-2, nchar(area_name)))) |>
       collect()
     class(County) <- c("County", class(County))
 
